--- a/css/style.css
+++ b/css/style.css
@@ -320,13 +320,14 @@ footer a {
 
 .project-title {
     position: absolute;
-    bottom: 20px;
-    left: 20px;
+    bottom: 50px; /* Adjusted from 20px to move it up slightly */
+    left: 150px;
     font-size: 1.5em;
     color: white;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 10px 20px;
     border-radius: 5px;
+    
 }
 
 
