--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ nav {
 header a {
     text-decoration: none;
     color: black;
-    font-family: 'Georgia';
+    font-family: 'Raleway';
     margin: 0 15px;
     cursor: pointer;
 }
