--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ main {
     background-color: white;
     border-radius: 8px;
     padding: 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    /*box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);*/
 }
 
 .close {
