--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,13 @@ header {
     background-color: #EFD5C3;
     z-index: 1000;
     box-sizing: border-box;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);*/
 }
 
 nav {
     display: flex;
     gap: 15px;
-    flex-wrap: wrap; /* Allow items to wrap if needed */
+    flex-wrap: nowrap; /* Allow items to wrap if needed */
 }
 
 /* Style for Navigation Links */
