--- a/css/style.css
+++ b/css/style.css
@@ -552,6 +552,7 @@ iframe {
 .overlay-text {
     background-color: #EFD5C3;
     color: #000;
+    font-family: 'Raleway';
     padding: 15px;
     border-radius: 5px;
     margin-top: 10px;
@@ -572,7 +573,7 @@ footer {
     align-items: center;
     padding: 10px 20px;
     background-color: #F5F5F5;
-    font-family: 'Trebuchet MS';
+    font-family: 'Raleway';
 }
 
 footer p {
@@ -599,9 +600,9 @@ footer img {
 }
 
 #lets-talk h2 {
-    color: #839791;
-    font-size: 2em;
-    font-family: 'Georgia';
+    color: #001011;
+    font-size: 5em;
+    font-family: 'Raleway';
     margin-bottom: 80px;
     margin-left: 10%; /* Aligns with About Me title */
     text-align: left; /* Align text to the left */
@@ -643,6 +644,7 @@ footer img {
     text-align: left;
     cursor: pointer;
     font-size: 1.2em;
+    font-family: 'Raleway';
     color: white;
     display: flex;
     justify-content: space-between;
@@ -663,6 +665,7 @@ footer img {
     display: inline-flex;
     align-items: center;
     text-decoration: none;
+    font-family: 'Raleway';
     color: #839791;
     font-weight: bold;
 }
