--- a/css/style.css
+++ b/css/style.css
@@ -731,6 +731,10 @@ footer img {
         width: 90%; /* Make project images even smaller on very small screens */
     }
 
+    .project-box {
+            width: 90%; /* Make project images even smaller on very small screens */
+    }   
+
     .thumbnail {
         width: 40px; /* Even smaller thumbnails */
         height: 40px;
