--- a/css/style-subpages.css
+++ b/css/style-subpages.css
@@ -6,6 +6,7 @@
         display: flex;
         height: 100vh;
         overflow: visible;
+        vertical-align: top;
     }
 
     /* Left side styling - PDF section */
