--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ main {
     padding: 50px 0px;
     background-color: #839791;
     text-align: center;
-    width: 100%;
+    width: 100vw;
 }
 
 #skills h2 {
@@ -228,6 +228,7 @@ main {
     margin-bottom: 60px;
     color: #EFD5C3;
     font-family: 'Raleway';
+    width: 100vw;
 }
 
 .skill-item {
