--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ main {
 
 /* Skills Section */
 #skills {
-    padding: 50px 0px;
+    padding: 0px;
     background-color: #839791;
     text-align: center;
     width: 100vw;
