--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ main {
     height: 30vh;
     background-color: rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    margin: 0 auto;
+    margin: 0;
     border-radius: 10px;
 }
 
