--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ main {
 .skill-item {
     font-size: 1.5em;
     color: #EFD5C3;
-    margin: 10px 0;
+    margin: 0 0;
     font-family: 'Raleway';
 }
 
@@ -247,7 +247,7 @@ main {
     height: 30vh;
     background-color: rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    margin: 0;
+    margin: 0 auto;
     border-radius: 10px;
 }
 
