--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,9 @@ footer img {
 }
 /* For tablet-sized screens */
 @media (max-width: 768px) {
+    .left-section{
+        margin-bottom: 50px;
+    }
     .contact-container {
         flex-direction: column;
         align-items: center;
@@ -643,10 +646,23 @@ footer img {
         width: 70%;
         height: 40vh;
     } 
+
+    .thumbnail-container {
+        width: 40%;
+    }
+    .thumbnail {
+        width: 40px; /* Even smaller thumbnails */
+        height: 40px;
+    }
+
 }
 
 /* For very small screens (phones) */
 @media (max-width: 480px) {
+
+    .left-section{
+        margin-bottom: 50px;
+    }
     .logo {
         width: 90px;
         height: 45px;
@@ -664,7 +680,9 @@ footer img {
         width: 70%;
         height: 30vh;
     }       
-
+    .thumbnail-container {
+        width: 40%;
+    }
         
     .thumbnail {
         width: 40px; /* Even smaller thumbnails */
@@ -689,13 +707,6 @@ footer img {
         padding: 10px;
     }
 
-    .thumbnail-container {
-        width: 40%;
-    }
-    
 
-    .thumbnail {
-        width: 40px; /* Even smaller thumbnails */
-        height: 40px;
-    }
+    
 }
