--- a/css/style.css
+++ b/css/style.css
@@ -626,9 +626,47 @@ footer img {
 }
 /* For tablet-sized screens */
 @media (max-width: 768px) {
-    .main{
-        height: 120vh;
+    main {
+        flex-direction: column;
+        height: auto;
     }
+
+    .right-section,
+    .left-section {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .right-section img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+
+    .body-text-l3 {
+        font-size: calc(4vw);
+    }
+
+    #about-me h2 {
+        text-align: center; /* Align text to the left */
+
+    }
+
+    #project h2 {
+        text-align: center; /* Align text to the left */
+
+    }
+
+    #my-art h2 {
+        text-align: center; /* Align text to the left */
+
+    }
+
+    #lets-talk h2 {
+        text-align: center; /* Align text to the left */
+
+    }
+
     .contact-container {
         flex-direction: column;
         align-items: center;
